--- a/src/components/Welcome_page/welcome.css
+++ b/src/components/Welcome_page/welcome.css
@@ -16,6 +16,12 @@ body {
    background-color: #222;
    
 }
+@media screen and (max-width : 420px) {
+    .welcome-page {
+      height: 510px;
+      width: 100%;
+    }
+} 
 .fade {
     width: 100%;
     height: 100vh;
@@ -34,6 +40,11 @@ body {
     height: 35px;
     float: left;
     margin-top: -2px;
+}
+@media screen and (max-width : 420px) {
+    .netflix-logo {
+        margin-left: -40px;
+    }
 }
 .logo {
     padding-top: 28px;
@@ -56,6 +67,11 @@ body {
     cursor: pointer;
     transition: 0.3s;
 }
+@media screen and (max-width : 420px) {
+    .sign-in {
+        margin-right: -20px;
+    }
+}
 .sign-in:hover {
     background-color: rgb(199, 0, 0);
     transition: 0.3s;
@@ -68,6 +84,7 @@ body {
     margin-top: 130px;
     font-family: sans-serif;
 }
+
 .intro-text {
     
     display: grid;
@@ -83,6 +100,12 @@ body {
     max-width: 650px;
     
 }
+ @media screen and (max-width : 420px) {
+    .intro h1 {
+        font-size: 35px;
+        margin-top: -35px;
+    }
+} 
 .intro h2 {
     font-weight: 300;
 }
@@ -90,6 +113,12 @@ body {
     font-weight: 400;
     
 }
+@media screen and (max-width : 420px) {
+    .intro h3 span {
+        margin-left: 85px;
+    }
+}
+
 .inp {
     display: flex;
     align-items: center;
@@ -106,6 +135,12 @@ body {
     padding-left: 10px;
     color: rgba(0, 0, 0, .5);
 }
+@media screen and (max-width:420px) {
+    .intro-input {
+        width: 250px;
+        margin-left: -40px;
+    }
+}
 .get-started {
     width: 180px;
     height: 60px;
@@ -117,6 +152,12 @@ body {
     cursor: pointer;
     transition: 0.3s;
 
+}
+@media screen and (max-width:420px) {
+    .get-started {
+        width: 150px;
+        margin-left: -30px;
+    }
 }
 .get-started:hover {
     transition: 0.3s;
@@ -132,18 +173,57 @@ body {
     padding-left: 125px;
     padding-top: 150px;
 }
+@media screen and (max-width:420px) {
+    .section-one {
+        width: 100%;
+        margin-top: -390px;
+        
+    }
+}
 .section-one h1 {
     font-size: 52px;
+    max-width: 450px;
+}
+@media screen and (max-width:420px) {
+    .section-one h1{
+       font-size: 28px;
+        margin-left: -130px;
+        display: flex;
+        max-width: 420px;
+        justify-content: center;
+        margin-top: -120px;
+        
+        
+    }
 }
 .section-one h2{
     font-size: 26px;
     margin-top: 20px;
     font-weight: 300;
+    max-width: 500px;
+}
+@media screen and (max-width:420px) {
+    .section-one h2{
+        font-size: 19px;
+        margin-left: -90px;
+        max-width: 350px;
+
+    }
+    .section-one h2 span {
+        margin-left: 120px;
+    }
 }
 .section-one img {
     margin-top: -310px;
     margin-left: 630px;
     width: 500px;
+}
+@media screen and (max-width:420px) {
+    .section-one img {
+        margin-left: -110px;
+        width: 390px;
+        margin-top: 0;
+    }
 }
 .section-two {
     color: white;
@@ -154,20 +234,63 @@ body {
     font-family: sans-serif;
     padding-top: 150px;
 }
+@media screen and (max-width:420px) {
+    .section-two {
+        width: 100%;
+        display: grid;
+    }
+}
 .section-two h1 {
     font-size: 52px;
     margin-left: 600px;   
 }
+@media screen and (max-width:420px) {
+    .section-two h1{
+       font-size: 28px;
+        margin-left: 40px;
+        max-width: 400px;
+        justify-content: center;
+        margin-top: -120px;
+        
+    }
+    .section-two h1 span{
+        margin-left: 75px;
+    }
+}
+
 .section-two h2 {
     font-size: 26px;
     margin-top: 20px;
     font-weight: 300;
     margin-left: 600px;
 }
+@media screen and (max-width:420px) {
+    .section-two h2{
+        font-size: 19px;
+        margin-left: 42px;
+        max-width: 350px;
+        margin-top: -90px;
+    }
+    .section-two h2 span {
+        margin-left: 60px;
+    }
+
+}
 .section-two img {
     margin-top: -310px;
     margin-left: 50px;
     width: 500px;
+}
+@media screen and (max-width:420px) {
+    .section-two img{
+        font-size: 19px;
+        margin-left: 30px;
+        margin-top: -80px;
+        max-width: 350px;
+        width: 300;
+        
+    }
+
 }
 .section-three {
     color: white;
@@ -179,18 +302,54 @@ body {
     padding-top: 150px;
     padding-left: 125px;
 }
+@media screen and (max-width:420px) {
+    .section-three {
+        width: 100%;
+        display: grid;
+    }
+}
 .section-three h1 {
     font-size: 52px;
+}
+@media screen and (max-width:420px) {
+    .section-three h1{
+       font-size: 28px;
+        margin-left: -40px;
+        max-width: 400px;
+        justify-content: center;
+        margin-top: -120px;
+        
+    }
+
 }
 .section-three h2 {
     font-size: 26px;
     margin-top: 20px;
     font-weight: 300;
 }
+@media screen and (max-width:420px) {
+    .section-three h2{
+        font-size: 19px;
+        margin-left: -80px;
+        max-width: 350px;
+        margin-top: -130px;
+    }
+    .section-three h2 span {
+        margin-left: 10px;
+    }
+ 
+}
 .section-three img {
     margin-top: -250px;
     margin-left: 600px;
     width: 550px;
+}
+@media screen and (max-width:420px) {
+    .section-three img {
+        margin-left: -110px;
+        width: 390px;
+        margin-top: -130px;
+    }
 }
 .section-four {
     color: white;
@@ -201,9 +360,26 @@ body {
     font-family: sans-serif;
     padding-top: 150px;
 }
+@media screen and (max-width:420px) {
+    .section-four {
+        width: 100%;
+        display: grid;
+    }
+}
 .section-four h1 {
     font-size: 52px;
     margin-left: 650px; 
+}
+@media screen and (max-width:420px) {
+    .section-four h1{
+       font-size: 28px;
+        margin-left: 25px;
+        max-width: 400px;
+        justify-content: center;
+        margin-top: -120px;
+        
+    }
+
 }
 .section-four h2 {
     font-size: 26px;
@@ -211,8 +387,27 @@ body {
     font-weight: 300;
     margin-left: 650px;
 }
+@media screen and (max-width:420px) {
+    .section-four h2{
+        font-size: 19px;
+        margin-left: 35px;
+        max-width: 350px;
+        margin-top: -100px;
+    }
+    .section-four h2 span {
+        margin-left: 10px;
+    }
+  
+}
 .section-four img {
     margin-top: -310px;
     margin-left: 50px;
     width: 500px;
 }
+@media screen and (max-width:420px) {
+    .section-four img {
+        margin-left: 20px;
+        width: 390px;
+        margin-top: -20px;
+    }
+}   
