--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,6 +7,19 @@
     overflow-x: hidden;
     overflow-y: scroll;
 }
+ @media screen and (max-width :420px ) {
+    .container {
+        width: 100%;
+        height: 400px;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+} 
+
+
+
 
 .container::-webkit-scrollbar{
     display: none;
@@ -22,6 +35,7 @@
     padding-right: 25px;
     transition: 0.2s;
 }
+
 .logos-no-bg {
     transition: 0.2s;
     width: 100%;
@@ -32,15 +46,21 @@
     padding-left: 25px;
     padding-right: 25px;
 }
-
-
-
 .netflix-logo {
     width: 100px;
     height: 30px;
     float: left;
     margin-top: -2px;
+    
 }
+@media screen and (max-width : 420px) {
+    .netflix-logo {
+        width: 180px;
+        padding-left: 30px;
+        
+    }
+}
+
 
 .avatar {
     width: 70px;
@@ -81,6 +101,12 @@
     letter-spacing: -3px;
     /* font-family: sans-serif; */
 }
+@media screen and (max-width : 420px){
+    .title {
+        font-size: 40px;
+        margin-top: 10px;
+    }
+} 
 .buttons {
     margin-top: 25px;
   
@@ -114,10 +140,17 @@
 }
 .description {
     margin-top: 15px;
-    font-size: 15px;
+    font-size: 14px;
     color: white;
     
 }
+@media screen and (max-width : 420px) {
+    .description {
+        margin-top: 1px;
+        max-width: 350px;
+    }
+    
+} 
 .shade {
     height: 7.4rem;
     background-image: linear-gradient(180deg,transparent,rgba(1,1,1,.50),#111);
@@ -127,3 +160,9 @@
     top: 243px;
     
 }
+ @media screen and (max-width : 420px){
+    .shade {
+        top: 135px;
+        
+    }
+} 
