--- a/src/components/movies/movies.css
+++ b/src/components/movies/movies.css
@@ -13,11 +13,20 @@ body {
 }
 .movie {
     margin-top: 520px;
-    width: 410px;
-    height: 250px;
+    width: 310px;
+    height: 190px;
     transition: 0.1s;
     background-color: #111;
 }
+ @media screen and (max-width : 420px){
+    .movie{
+        margin-top: 420px;
+        width: 210px;
+        height: 120px;
+        background-position: center;
+        background-size: contain;
+    }
+} 
 .type {
     position: absolute;
     top: 478px;
@@ -27,6 +36,11 @@ body {
     font-size: larger;
     
 }
+ @media screen and (max-width : 420px){
+    .type {
+        top: 385px;
+    }
+} 
 .cards{
     display: flex;
     overflow-x: scroll;
@@ -36,7 +50,7 @@ body {
    display: none;
 }
 .movie:hover{
-    transform: scale(1.2);
+    transform: scale(1.4);
     transition: 0.5s;
 }
 .movie-names {
@@ -49,13 +63,19 @@ body {
 }
 .small-card {
     margin-top: 10px;
-    width: 180px;
-    height: 100px;
+    width: 150px;
+    height: 90px;
     margin-left: 10px;
     transition: 0.2s;
 }
+ @media screen and (max-width:420px){
+    .small-card{
+        margin-top: -2px;
+        
+    }
+} 
 .small-card:hover{
-    transform: scale(1.3);
+    transform: scale(1.6);
     transition: 0.5s;
 }
 .action-title {
@@ -63,6 +83,11 @@ body {
     color: white;
     margin-left:30px ;
 }
+ @media screen and (max-width:420px){
+    .action-title {
+        margin-top: -5px;
+    }
+} 
 .action-name {
     color: white;
     display: flex;
